[workspace]
resolver = "2"
members = ["packages/gchdb"]

[workspace.dependencies]
log = { version = "0.4.22", features = [
    "max_level_trace",
    "release_max_level_info",
] }
serde = { version = "1.0.214", features = ["derive"] }
tantivy = { version = "0.22.0", default-features = false, features = [
    "lz4-compression",
] }
thiserror = "1.0.66"

cang-jie = { git = "https://github.com/darkskygit/cang-jie" }
gchdb = { path = "./packages/gchdb" }

[profile.release]
lto = true
panic = "abort"
# opt-level = "z"
codegen-units = 1
incremental = false
